# cvweaver

./: LICENSE  README.md  pyproject.toml
app/: cvweaver.py
data/: cv.yaml
templates/: cv-template.tplx  latex.tpl
